# canvasconnector

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  publishpypi.yml
API/: index.html
assets/readme/: index.html
code-examples/: index.html
docs/: API.md  code-examples.md  index.md
docs/assets/: readme.md
search/: search_index.json
src/canvasconnector/: __init__.py  get_assignments.py  get_best_friends.py  get_courses.py  get_peers.py  get_upcoming_assignments.py  make_client.py  utils.py
stylesheets/: extra.css
