[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
name = "canvasconnector"
version = "0.0.1"
description = "A Python package for connecting to Canvas LMS API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",      
    "python-dotenv>=1.0.0",  
    "polars==1.37.0",        
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
canvas-cli = "canvasconnector.cli:main"

[tool.uv]
# Here you can put uv-specific configuration if needed later
# (you can leave this section out entirely for the simplest case)
